--- a/README.org
+++ b/README.org
@@ -86,3 +86,24 @@ For example, I have /my personal configuration/ in the repository [[https://gitl
 *** Operating System
 - Tested on Ubuntu Linux 19.04 ([[https://system76.com/pop][Pop! OS]]) and macOS 10.14.
 - Windows is not supported. We welcome community contributions!
+** Known Issues
+*** OrgMode : =Invalid function: org-preserve-local-variables=
+#+BEGIN_EXAMPLE
+  # M-x eshell
+
+  cd ~/.emacs.d/straight/repos/org
+  find-file local.mk
+
+  # macOS
+  EMACS = /Applications/Emacs.app/Contents/MacOS/Emacs
+  lispdir = /Users/swaroop/.emacs.d/straight/repos/org/lisp
+  # Linux
+  EMACS = /usr/local/bin/emacs
+  lispdir = /home/swaroop/.emacs.d/straight/repos/org/lisp
+
+  # save file (=M-m f s=) and close buffer (=M-m b d=)
+
+  make autoloads
+
+  # Restart Emacs
+#+END_EXAMPLE
