--- a/README.org
+++ b/README.org
@@ -128,7 +128,7 @@ For example, assuming you have cloned /this/ repository to =~/rangoli-emacs=, he
 ** Caveats
 *** Operating System
 - Tested on Ubuntu Linux 19.04 ([[https://system76.com/pop][Pop! OS]]) and macOS 10.14.
-- Windows is not supported. We welcome community contributions!
+- Not tested on Windows. We welcome community contributions!
 ** Known Issues
 *** OrgMode : =Invalid function: org-preserve-local-variables=
 #+BEGIN_EXAMPLE
