[readme] specify with modules and json for emacs install
via https://github.com/emacs-lsp/lsp-docker/blob/711471e5530f2d884b23ee153ee36fb9bd08e7fd/docker/Dockerfile#L115

--- a/README.org
+++ b/README.org
@@ -72,7 +72,7 @@ rm -rf emacs
 time git clone https://git.savannah.gnu.org/git/emacs.git
 cd emacs
 time ./autogen.sh
-time ./configure --with-xwidgets --with-imagemagick --with-mailutils
+time ./configure --with-modules --with-json --with-xwidgets --with-imagemagick --with-mailutils
 time make clean
 time make -j9
 time sudo make install
